[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbag = "0.1.9"
itertools = "0.10.5"
once_cell = "1.16.0"
regex = { version = "1.7.0", default-features = false, features = ["std", "perf"] }
tinyvec = { version = "1.6.0", default-features = false }
# aoc-runner = "0.3.0"
# aoc-runner-derive = "0.3.0"
